--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -1,4 +1,29 @@
+<!DOCTYPE html>
+
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
-<script src= "{% static 'js/login.js' %}""></script>
-<h1>Home Page</h2>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
+    <script src= "{% static 'js/login.js' %}""></script>
+</head>
+<body>
+    <h1>Home Page</h1>
+    <form method ="post">
+        <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+        
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+        
+            <button type="submit">Login</button>
+            <!--
+            <label>
+              <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+            -->
+          </div>
+    </form>
+</body>
+    
+</html>
