--- a/backend/resuelto/templates/home.html
+++ b/backend/resuelto/templates/home.html
@@ -2,3 +2,10 @@
 <link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
 <script src= "{% static 'js/home.js' %}""></script>
 <h1>Home Page</h2>
+<form action="" method="post">
+    {% csrf_token %}
+    {% for x in form %}
+        {{x}}
+    {% endfor %}
+    <input type="submit" value="submit">
+</form>
