--- a/backend/resuelto/templates/registration/signup.html
+++ b/backend/resuelto/templates/registration/signup.html
@@ -4,6 +4,6 @@
 <script src= "{% static 'js/signup.js' %}"></script>
 <form action="{% url 'signup' %}" method="post">
     {% csrf_token %}
-    {{form | crispy}}
+    {{form}}
     <input type="submit" class="btn btn-primary btn-block mt-2" value="Register">
 </form>
