Update HTML pages

--- a/backend/resuelto/templates/calendar.html
+++ b/backend/resuelto/templates/calendar.html
@@ -1,4 +1,4 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'styles/calendar.css' %}">
-<script src= "{% static 'js/calendar.js' %}""></script>
-<h1>Home Page</h2>
+<script src= "{% static 'js/calendar.js' %}"></script>
+<h1>Home Page</h1>
