--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -4,17 +4,17 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
-    <script src= "{% static 'js/login.js' %}""></script>
+    <script src= "{% static 'js/login.js' %}"></script>
 </head>
 <body>
     <h1>Home Page</h1>
     <form method ="post">
         <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <label for="user"><b>Username</b></label>
+            <input type="text" id="user" placeholder="Enter Username" name="user" required>
         
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <label for="pass"><b>Password</b></label>
+            <input type="password" id="pass" placeholder="Enter Password" name="pass" required>
         
             <button type="submit">Login</button>
             <!--
