Added proper indentations and raw HTML

--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -1,8 +1,22 @@
-<form action=""  method="post">
-    {% csrf_token %}
-    <label for="usernamex">Username</label>
-    <input type="text" name="username" id="usernamex" />
-    <label for="passwordx">Password</label>
-    <input type="password" name="password" id="passwordx" />
-    <input type="submit" value="Submit" />
-</form>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <form action="" method="post">
+        {% csrf_token %}
+        <label for="usernamex">Username</label>
+        <input type="text" name="username" id="usernamex" />
+        <label for="passwordx">Password</label>
+        <input type="password" name="password" id="passwordx" />
+        <input type="submit" value="Submit" />
+    </form>
+</body>
+
+</html>
