--- a/backend/resuelto/templates/home.html
+++ b/backend/resuelto/templates/home.html
@@ -1,4 +1,15 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
-<script src= "{% static 'js/home.js' %}""></script>
-<h1>Home Page</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
+    <script src="{% static 'js/home.js' %}""></script>
+    <title>Document</title>
+</head>
+<body>
+    <h1>Home Page</h2>
+</body>
+</html>
