--- a/backend/resuelto/templates/resolutionPosts.html
+++ b/backend/resuelto/templates/resolutionPosts.html
@@ -1,4 +1,18 @@
-{% for x in list %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    {% for x in list %}
     {{x.title}} By <i>{{x.author}}</i> <br>
     {{x.body}} <br>
-{% endfor %}
+    {% endfor %}
+</body>
+
+</html>
