Added custom cursor for home page

--- a/backend/resuelto/static/styles/main.css
+++ b/backend/resuelto/static/styles/main.css
@@ -1,3 +1,63 @@
 h1{
     color: blue;
 }
+body{
+    margin: 0;
+    border: 0;
+    height: 100vh;
+    background-color: black;
+}
+.cursor{
+    width: 40px;
+    height: 40px;
+    border: 5px solid cyan;
+    border-radius: 50%;
+    position: absolute;
+    transition-duration: 200ms;
+    transition-timing-function: ease-out;
+    animation: canim .5s infinite alternate;
+}
+.cursor::after{
+    content: "";
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border-radius: 50%;
+    border: 8px solid green;
+    top: -8px;
+    left: -8px;
+
+    animation: canim2 .5s infinite alternate;
+}
+@keyframes canim {
+    from {
+        transform:scale(1);
+    }
+    to{
+        transform:scale(.7);
+    }
+}
+@keyframes canim2 {
+    from {
+        transform:scale(1);
+    }
+    to{
+        transform:scale(.4);
+    }
+}
+@keyframes canim3{
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(5);
+    }
+    100%{
+        transform: (1);
+        opacity: 0;
+    }
+}
+.expand{
+    animation: canim3 .5s linear infinite;
+    border: 1px solid red;
+}
