--- a/backend/resuelto/templates/home.html
+++ b/backend/resuelto/templates/home.html
@@ -6,11 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
-    <script src="{% static 'js/home.js' %}""></script>
     <title>Document</title>
 </head>
 <body>
+    <div class="cursor">
+
+    </div>
     <h1>Home Page</h2>
+    <script src="{% static 'js/home.js' %}""></script>
 </body>
 </html>
 
