--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -3,6 +3,7 @@
 {% load static %}
 <html>
 <head>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
     <script src= "{% static 'js/login.js' %}""></script>
 
@@ -20,7 +21,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="jumbotron bg-primary text-center text-white">
+    <div class="jumbotron text-center text-white" style="background-color: #9CF7EC;">
         <h1>NewRes</h1>
     </div>
     
@@ -42,7 +43,7 @@
             
             
         </form>
-    
+    </div>
 
 </body>
     
