--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -26,17 +26,18 @@
         <h1>NewRes</h1>
     </div>
     
-        <form method ="post">
+        <form method ="post" action="">
+            {% csrf_token %}
             <div class="row justify-content-center">
                 <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname" required>
+                <input type="text" placeholder="Enter Username" name="username" required>
             
                 
             </div>
             <br>
             <div class="row justify-content-center">
                 <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
+                <input type="password" placeholder="Enter Password" name="password" required>
             </div>
             <div class="row justify-content-center">
                 <button type="submit">Login</button>
