Navigation bar features in dashboard

--- a/backend/resuelto/static/styles/dashboard.css
+++ b/backend/resuelto/static/styles/dashboard.css
@@ -1,3 +1,11 @@
 h5.goalDateInfo{
     text-align:right
 }
+.navbar {
+    margin-bottom:0;
+    margin-top: 0;
+  }
+.jumbotron {
+    margin-bottom:0;
+    /*background-color: #9CF7EC !Important*/; 
+}
