update to logo header on dashboard

--- a/backend/resuelto/templates/dashboard.html
+++ b/backend/resuelto/templates/dashboard.html
@@ -5,7 +5,10 @@
 <html>
 <head>
     <title>Dashboard</title>
-    
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
+
     
     <!--libraries for bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,11 +25,11 @@
     <!--Style sheets loaded afterwards to override bootstrap-->
     <link rel="stylesheet" type="text/css" href="{% static 'styles/dashboard.css' %}">
     <script src= "{% static 'js/dashboard.js' %}"></script>
-
+    
 </head>
 <body>
     <div class="jumbotron bg-primary text-center text-white">
-        <h1>NewRes</h1>
+        <h1 class="logo" style="font-family: 'Major Mono Display', monospace;">NewRes</h1>
         
         
     </div>
