--- a/backend/resuelto/static/styles/dashboard.css
+++ b/backend/resuelto/static/styles/dashboard.css
@@ -7,5 +7,13 @@ h5.goalDateInfo{
   }
 .jumbotron {
     margin-bottom:0;
-    /*background-color: #9CF7EC !Important*/; 
+    background-color: #9CF7EC !Important; 
+}
+
+h1.logo{
+    font-size: 96px;
+    line-height: 96px;
+    font-family: 'Major Mono Display', monospace;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(4px);
 }
