--- a/backend/resuelto/templates/registration/signup.html
+++ b/backend/resuelto/templates/registration/signup.html
@@ -7,17 +7,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/signup.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="{% static 'js/signup.js' %}"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <form action="{% url 'signup' %}" method="post">
-        {% csrf_token %}
-        {{form|crispy}}
-        <input type="submit" class="btn btn-primary btn-block mt-2" value="Register">
-    </form>
-
+    <div class="container">
+        <div class="mt-4 login-form">
+        <form action="{% url 'signup' %}" method="post">
+            {% csrf_token %}
+            {{form|crispy}}
+            <input type="submit" class="btn btn-primary btn-block mt-2" value="Register">
+        </form>
+        </div>
+    </div>
 </body>
 
 </html>
