--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+{% if messages %}
+    <ul class="messages">
+        {% for msg in messages %}
+        <p class="text-center">
+        <div class="alert alert-{{msg.level_tag}} alert-dismissible text-center" role="alert">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{msg.message}}
+        </div>
+        </p>
+        {% endfor %}
+    </ul>
+{% endif %}
     <form action="" method="post">
         {% csrf_token %}
         <label for="usernamex">Username</label>
