--- a/backend/resuelto/templates/home.html
+++ b/backend/resuelto/templates/home.html
@@ -15,7 +15,7 @@
     </div>
     <div class="linkcontainer">
         <div class="linkflexcontainer">
-            <a href="{% url 'LoginPage'%}">LOGIN</a>
+            <a href="{% url 'LoginPage'%}" class="buttoncus">LOGIN</a>
         </div>
         <div class="linkflexcontainer">
             <a href="{% url 'LoginPage'%}">SIGNUP</a>
