Checking for changes

--- a/backend/resuelto/templates/home.html
+++ b/backend/resuelto/templates/home.html
@@ -18,7 +18,7 @@
             <a href="{% url 'LoginPage'%}" class="buttoncus">LOGIN</a>
         </div>
         <div class="linkflexcontainer">
-            <a href="{% url 'LoginPage'%}">SIGNUP</a>
+            <a href="{% url 'signup'%}" class="buttoncus">SIGNUP</a>
         </div>
     </div>
     <script src="{% static 'js/home.js' %}""></script>
