--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -28,7 +28,7 @@
         <p class="text-center">
         <div class="alert alert-{{msg.level_tag}} alert-dismissible text-center" role="alert">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{msg.message}}
+            <h3 style="color: red;">{{msg}}</h3>
         </div>
         </p>
         {% endfor %}
