--- a/backend/resuelto/templates/dashboard.html
+++ b/backend/resuelto/templates/dashboard.html
@@ -1,33 +1,16 @@
-<!DOCTYPE html>
+{% extends "default.html" %}
 
 {% load static %}
 
-<html>
-<head>
-    <title>Dashboard</title>
-    <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
+{% block title %}Dashboard {% endblock %}
 
-    
-    <!--libraries for bootstrap -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
+{% block resources %}
     <!--Style sheets loaded afterwards to override bootstrap-->
     <link rel="stylesheet" type="text/css" href="{% static 'styles/dashboard.css' %}">
     <script src= "{% static 'js/dashboard.js' %}"></script>
-    
-</head>
-<body>
+{% endblock %}
+
+{% block body %}
     <div class="jumbotron bg-primary text-center text-white">
         <h1>Hello {{request.user}}</h1>
     </div>
@@ -210,6 +193,4 @@
 
     
 
-</body>
-    
-</html>
+{% endblock %}
