--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -1,27 +1,15 @@
-<!DOCTYPE html>
+{% extends "default.html" %}
 
 {% load static %}
 
-<html>
-<head>
-    <title>Login</title>
+{%block title %}Login{% endblock %}
+
+{% block resources %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
     <script src= "{% static 'js/login.js' %}""></script>
+{% endblock %}
 
-    
-    <!--libraries for bootstrap -->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% block body %}
     <div class="jumbotron text-center text-white" style="background-color: #9CF7EC;">
         <h1>NewRes</h1>
     </div>
@@ -46,8 +34,4 @@
             
         </form>
     </div>
-
-</body>
-    
-=
-</html>
+{% endblock %}
