--- a/backend/resuelto/templates/resolutionPosts.html
+++ b/backend/resuelto/templates/resolutionPosts.html
@@ -1,17 +1,14 @@
+{% extends "default.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% block title %}Posts{% endblock %}
+
+{% block resources %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/post.css' %}">
-    
-    <title>Document</title>
-</head>
+{% endblock %}
 
-<body>
+{% block body %}
     <div class="cursor"></div>
 <div id="container">
     <div id="navbar">
@@ -52,6 +49,4 @@
     </div>
 </div>
 <script src="{% static 'js/home.js' %}""></script>
-</body>
-
-</html>
+{% endblock %}
