--- a/backend/resuelto/templates/registration/login.html
+++ b/backend/resuelto/templates/registration/login.html
@@ -1,21 +1,11 @@
+{% extends "default.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% block resources %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
     <script src="{% static 'js/login.js' %}"></script>
-    <title>Document</title>
-</head>
+{% endblock %}
 
-<body>
+{% block body %}
     <h1>Home Page</h2>
-</body>
-
-<<<<<<< HEAD
-</html>
-=======
-</html>
->>>>>>> 0637684c6e05ad80ca9781afa61b6dfb7c116bad
+{% endblock %}
