--- a/backend/resuelto/templates/registration/signup.html
+++ b/backend/resuelto/templates/registration/signup.html
@@ -1,19 +1,14 @@
+{% extends "default.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/signup.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+{% block title %}Login{% endblock %}
+
+{% block resources %}
     <script src="{% static 'js/signup.js' %}"></script>
-    <title>Document</title>
-</head>
+{% endblock %}
 
-<body>
+{% block body %}
     <div class="container">
         <div class="mt-4 login-form">
         <form action="{% url 'signup' %}" method="post">
@@ -23,6 +18,4 @@
         </form>
         </div>
     </div>
-</body>
-
-</html>
+{% endblock %}
