--- a/backend/resuelto/templates/dashboard.html
+++ b/backend/resuelto/templates/dashboard.html
@@ -180,34 +180,20 @@
                             
                     </div>
                 </div>
-                {% for x in list %}
-                <h2>{{x.title}} Felix</h2>
-                <p>{{x.body}}</p>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h5>
-                            <!-- Retrieving timer icon-->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-                            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
-                            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
-                        </svg>
-                        Created Jan 2, 2021</h5>
-                    </div>
-                    <div class="col-sm-6">
-                        <h5>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-check" viewBox="0 0 16 16">
-                            <path d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-                            <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-                        </svg> Goal Nov 15 2021
-                        </h5>
-                    </div>
-                </div>
-                {% endfor %}
             </div>
            
         </div>
     </div>
-
+    {% for x in list %}
+        {{x.title}}
+        {{x.author}}
+        <form method="POST">
+            {% csrf_token %}
+            <input type="text" name="id" value={{x.id}} hidden />
+            <input type="text" name="delete" value="True" hidden />
+            <input type="submit" value="delete">
+        </form>
+    {% endfor %}
     
 
 </body>
