Add pagination to dashboard with ListView

--- a/backend/resuelto/templates/dashboard_resolutions.html
+++ b/backend/resuelto/templates/dashboard_resolutions.html
@@ -1,5 +1,5 @@
 <div class="row flex-column mb-1">
-	{% for resolution in list %}
+	{% for resolution in object_list %}
 	<div class="col border py-1 mb-3">
 	<h2>{{resolution.title}}</h2>
 	<p>{{resolution.body}}</p>
@@ -44,6 +44,25 @@
         </div>
 	</div>
 	</div>
-	{% endfor %}
-  
+	{% endfor %}  
 </div>
+<span class="current">
+  Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+</span>
+<nav aria-label="Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}">
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+    {% endif %}
+
+    {% for page in page_obj.paginator.page_range %}
+    <li class="page-item"><a class="page-link" href="?page={{page}}">{{ page }}</a></li>
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a></li>
+    {% endif %}
+  </ul>
+</nav>
