--- a/backend/resuelto/templates/login.html
+++ b/backend/resuelto/templates/login.html
@@ -40,14 +40,15 @@
         </ul>
         {% endif %}
         <div class="login-form">
-            <form>
+            <form method="POST">
+                {% csrf_token %}
                 <div class="form-group">
                     <label for="usernamex">Username</label>
                     <input type="text" class="form-control" name="username" id="usernamex" />
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
