--- a/backend/resuelto/templates/resolutionPosts.html
+++ b/backend/resuelto/templates/resolutionPosts.html
@@ -39,7 +39,7 @@
                     <div>
                         <h3>Joined by {{x.counter}} users</h3>
                     </div>
-                    <div>
+                    <div class="joinedyet">
                         {% if x.support == 'True' %}
                         <p>You have already joined</p>
                         {% else %}
@@ -57,8 +57,15 @@
         </div>
     </div>
     <div id="sidebar">
-        <img src="http://pinit.top/quotes/wp-content/uploads/2019/08/Motivational-quotes-For-additional-motivation-inspiration-and-vast-topics-of-knowledge-visit-us.jpg" alt="image"></img>
-        <img src="https://i.pinimg.com/originals/4d/0d/9e/4d0d9e383c85e4908f31d0f3a00297ac.jpg" alt="motivation"></img>
+        <div id="sidebarquote">
+            <h1>Keep Some</h1>
+            <h1>Room</h1>
+            <h1>In Your</h1>
+            <h1>Heart</h1>
+            <h1>For the</h1>
+            <h1 class="textanim">Unimaginable</h1>
+        </div>
+        
     </div>
 </div>
 </body>
