--- a/backend/resuelto/templates/registration/signup.html
+++ b/backend/resuelto/templates/registration/signup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/signup.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Fredoka One' rel='stylesheet'>
     <script src="{% static 'js/signup.js' %}"></script>
     <title>Document</title>
 </head>
@@ -18,6 +19,7 @@
         <div class="mt-4 login-form">
             <form action="{% url 'signup' %}" method="post">
                 {% csrf_token %}
+                <h2 class="mx-auto" style="font-family: Fredoka One;">Sign Up</h2>
                 {{form|crispy}}
                 <input type="submit" class="btn btn-primary btn-block mt-2" value="Register">
             </form>
