--- a/backend/resuelto/templates/registration/signup.html
+++ b/backend/resuelto/templates/registration/signup.html
@@ -17,12 +17,14 @@
 <body>
     <div class="container">
         <div class="mt-4 login-form">
-            <form action="{% url 'signup' %}" method="post">
+            <form action="{% url 'signup' %}" method="post" style="font-family: 'Fredoka One';font-size: 18px;">
                 {% csrf_token %}
                 <h2 class="mx-auto" style="font-family: Fredoka One;">Sign Up</h2>
                 {{form|crispy}}
                 <input type="submit" class="btn btn-primary btn-block mt-2" value="Register">
             </form>
+            <p class="text-center"><a href="{% url 'login' %}" class="text-decoration-none"
+                style="font-family: 'Fredoka One';font-size: 18px;">Already have an account? Log In</a></p>
         </div>
     </div>
 </body>
